# physio-bodychart

./: .gitignore  CLAUDE.md  README.md  SESSION_JSON_SCHEMA.md  SETTINGS.md  build.sh  claude instructions.txt  meson.build
.claude/: settings.local.json
docs/: ACCELEROMETER_GONIOMETER.txt  ARCHITECTURE_20260508.md  CLAUDE_CHAT_ARCHITECTURE_REVIEW.md  DOCUMENTS_INDEX.txt  GITHUB_UPDATE_QUICK.txt  GIT_PUSH_GUIDE.md  INDEX.md  README_CLAUDE_CHAT.md  SECURITY_AUDIT_20260517.md  SESSION_CHECKLIST_20260508.txt  SESSION_SUMMARY_20260508.md  todolist.txt
physio-assessment/: CLAUDE.md  README.md  pyproject.toml
physio-assessment/core/: 01_consent_setup.md  02_subjective.md  03_medical_screening.md  04_pain_classification.md  05_outcome_measures.md  06_diagnosis_goals.md  07_barriers_treatment.md
physio-assessment/docs/: customising-the-assessment-form.md
physio-assessment/physio_assessment/: __init__.py  assessment_view.py  logic.py  main.py  mapping.py  models.py  nav.py  search.py  search_widget.py  storage.py  tui.py  watcher.py  widgets.py  yaml_subsection.py
physio-assessment/physio_assessment/objective/: main.py  objective_view.py
physio-assessment/physio_assessment/objective/sections/: active_movement.py  functional.py  general.py  muscle.py  neurological.py  passive_movement.py  sensory.py
physio-assessment/physio_assessment/sections/: barriers.py  base.py  consent.py  diagnosis.py  medical.py  objective.py  outcome_measures.py  pain_classification.py  rx_plan.py  scratchpad.py  subjective.py
physio-assessment/regions/: lumbar_physical_examination.md
physio-bodychart/: .gitignore  CLAUDE.md  SETTINGS.md  meson.build
physio-bodychart/data/: com.physio.bodychart.desktop
physio-bodychart/docs/: phase2-plan.md  session-2026-04-30.md  session-2026-05-01.md
physio-bodychart/src/: canvas.c  canvas.h  input.c  input.h  main.c  obj_chart.c  obj_chart.h  overlays.c  overlays.h  persistence.c  persistence.h  report.c  report.h  session.c  session.h  stroke.c  stroke.h  svg_regions.c  svg_regions.h  svg_views.c  svg_views.h  window.c  window.h
physio-bodychart/src/overlay_data/: dermatomes.c
src/: body_outlines.c  (+18 more)
(+8 files in other folders)
