[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physio-assessment"
version = "0.1.0"
description = "Specialist physiotherapy assessment and report generator TUI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Lance House", email = "lance.house@gmail.com"},
]

dependencies = [
    "textual>=0.50.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
physio-assessment = "physio_assessment.main:main"
physio-objective  = "physio_assessment.objective.main:main"

[tool.setuptools]
packages = [
    "physio_assessment",
    "physio_assessment.sections",
    "physio_assessment.objective",
    "physio_assessment.objective.sections",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 100
